cmake_minimum_required(VERSION 2.6)
project(sql_pool_demo)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_EXE_LINKER_FLAGS "-Wl,-rpath,./:../lib")
include_directories(api/)
include_directories(api/clickhouse)
include_directories(api/libpq)
link_directories(${CMAKE_CURRENT_SOURCE_DIR}/clickhouse ${CMAKE_CURRENT_SOURCE_DIR}/pgsql)
set(CTPGATEWAY_SOURCE  main.cpp)
add_executable(sql_pool_demo  ${CTPGATEWAY_SOURCE})
target_link_libraries(sql_pool_demo -lpthread -ldl -lclickhouse-cpp-lib -lpq)
INSTALL(TARGETS sql_pool_demo DESTINATION "demo")